fix output text overflowing container

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -91,9 +91,6 @@ p
   background-color: #FFFFFF
   border: 1px solid lightgrey
 
-.output
-  white-space: pre
-
 // loading spinner
 .spinner
   margin-right: 1.5em
